--- a/locale/po/grassmods_it.po
+++ b/locale/po/grassmods_it.po
@@ -6670,7 +6670,7 @@ msgid "Creates topology for vector map."
 msgstr "Crea etichette per vettoriali GRASS e attributi associati"
 
 #: ../vector/v.build/main.c:40
-msgid "Optionaly also checks for topological errors."
+msgid "Optionally also checks for topological errors."
 msgstr ""
 
 #: ../vector/v.build/main.c:44
