--- a/locale/po/grassmods_ja.po
+++ b/locale/po/grassmods_ja.po
@@ -6690,7 +6690,7 @@ msgid "Creates topology for vector map."
 msgstr "ベクトルマップのカテゴリーを編集，構築します"
 
 #: ../vector/v.build/main.c:40
-msgid "Optionaly also checks for topological errors."
+msgid "Optionally also checks for topological errors."
 msgstr ""
 
 #: ../vector/v.build/main.c:44
