--- a/locale/po/grassmods_pl.po
+++ b/locale/po/grassmods_pl.po
@@ -6706,7 +6706,7 @@ msgid "Creates topology for vector map."
 msgstr "Tworzy topologię dla wektorowej mapy GRASS."
 
 #: ../vector/v.build/main.c:40
-msgid "Optionaly also checks for topological errors."
+msgid "Optionally also checks for topological errors."
 msgstr ""
 
 #: ../vector/v.build/main.c:44
