--- a/locale/po/grassmods_ru.po
+++ b/locale/po/grassmods_ru.po
@@ -6752,7 +6752,7 @@ msgid "Creates topology for vector map."
 msgstr "Создать топологию для векторного слоя GRASS."
 
 #: ../vector/v.build/main.c:40
-msgid "Optionaly also checks for topological errors."
+msgid "Optionally also checks for topological errors."
 msgstr ""
 
 #: ../vector/v.build/main.c:44
