various typo fixes, found by the Debian lintian QA tool (trac #2725)
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@66112 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/locale/po/grassmods_de.po
+++ b/locale/po/grassmods_de.po
@@ -6775,7 +6775,7 @@ msgid "Creates topology for vector map."
 msgstr "Erzeugt Topologie für GRASS Vektorkarten."
 
 #: ../vector/v.build/main.c:40
-msgid "Optionaly also checks for topological errors."
+msgid "Optionally also checks for topological errors."
 msgstr ""
 
 #: ../vector/v.build/main.c:44
