--- a/locale/po/grassmods_ko.po
+++ b/locale/po/grassmods_ko.po
@@ -6630,7 +6630,7 @@ msgid "Creates topology for vector map."
 msgstr "출력할 격자지도"
 
 #: ../vector/v.build/main.c:40
-msgid "Optionaly also checks for topological errors."
+msgid "Optionally also checks for topological errors."
 msgstr ""
 
 #: ../vector/v.build/main.c:44
