--- a/locale/po/grassmods_lv.po
+++ b/locale/po/grassmods_lv.po
@@ -6870,7 +6870,7 @@ msgid "Creates topology for vector map."
 msgstr "Vektorkartes nosaukums"
 
 #: ../vector/v.build/main.c:40
-msgid "Optionaly also checks for topological errors."
+msgid "Optionally also checks for topological errors."
 msgstr ""
 
 #: ../vector/v.build/main.c:44
