--- a/locale/po/grasswxpy_zh.po
+++ b/locale/po/grasswxpy_zh.po
@@ -11919,7 +11919,7 @@ msgstr "创建或重建拓扑"
 
 #: ../gui/wxpython/menustrings.py:560 ../gui/wxpython/menustrings.py:1461
 msgid ""
-"Creates topology for vector map. Optionaly also checks for topological "
+"Creates topology for vector map. Optionally also checks for topological "
 "errors."
 msgstr ""
 
