--- a/locale/po/grassmods_cs.po
+++ b/locale/po/grassmods_cs.po
@@ -6880,7 +6880,7 @@ msgid "Creates topology for vector map."
 msgstr "Vytvoří topologii vektorové vrstvy."
 
 #: ../vector/v.build/main.c:40
-msgid "Optionaly also checks for topological errors."
+msgid "Optionally also checks for topological errors."
 msgstr ""
 
 #: ../vector/v.build/main.c:44
