--- a/locale/po/grassmods_el.po
+++ b/locale/po/grassmods_el.po
@@ -6613,7 +6613,7 @@ msgid "Creates topology for vector map."
 msgstr "Αδυναμία ανάγνωσης διανυσματικού χάρτη"
 
 #: ../vector/v.build/main.c:40
-msgid "Optionaly also checks for topological errors."
+msgid "Optionally also checks for topological errors."
 msgstr ""
 
 #: ../vector/v.build/main.c:44
