--- a/locale/po/grassmods_pt.po
+++ b/locale/po/grassmods_pt.po
@@ -6958,7 +6958,7 @@ msgstr ""
 "relacionados."
 
 #: ../vector/v.build/main.c:40
-msgid "Optionaly also checks for topological errors."
+msgid "Optionally also checks for topological errors."
 msgstr ""
 
 #: ../vector/v.build/main.c:44
