--- a/locale/po/grasswxpy_cs.po
+++ b/locale/po/grasswxpy_cs.po
@@ -12207,7 +12207,7 @@ msgstr "Vytvořit nebo přebudovat topologii"
 
 #: ../gui/wxpython/menustrings.py:560 ../gui/wxpython/menustrings.py:1461
 msgid ""
-"Creates topology for vector map. Optionaly also checks for topological "
+"Creates topology for vector map. Optionally also checks for topological "
 "errors."
 msgstr ""
 "Vytvoří topologii vektorové vrstvy. Volitelně také zkontroluje topologické "
