--- a/locale/po/grasswxpy_ru.po
+++ b/locale/po/grasswxpy_ru.po
@@ -12343,7 +12343,7 @@ msgstr "Создать/построить топологию"
 
 #: ../gui/wxpython/menustrings.py:560 ../gui/wxpython/menustrings.py:1461
 msgid ""
-"Creates topology for vector map. Optionaly also checks for topological "
+"Creates topology for vector map. Optionally also checks for topological "
 "errors."
 msgstr ""
 
