keywords cosmetics: completing r66133
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@66144 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/locale/po/grassmods_cs.po
+++ b/locale/po/grassmods_cs.po
@@ -13690,7 +13690,7 @@ msgstr "Zapisuji nejkratší cesty..."
 #: ../vector/v.lrs/v.lrs.create/main.c:122
 #: ../vector/v.lrs/v.lrs.label/main.c:103
 #, fuzzy
-msgid "Linear Reference System"
+msgid "linear reference system"
 msgstr "Lineární referenční systém"
 
 #: ../vector/v.lrs/v.lrs.segment/main.c:75
