--- a/locale/po/grassmods_ja.po
+++ b/locale/po/grassmods_ja.po
@@ -13510,7 +13510,7 @@ msgstr "出力中..."
 #: ../vector/v.lrs/v.lrs.create/main.c:122
 #: ../vector/v.lrs/v.lrs.label/main.c:103
 #, fuzzy
-msgid "Linear Reference System"
+msgid "linear reference system"
 msgstr "線型参照系を作成"
 
 #: ../vector/v.lrs/v.lrs.segment/main.c:75
