--- a/locale/po/grassmods_zh.po
+++ b/locale/po/grassmods_zh.po
@@ -13645,7 +13645,7 @@ msgstr "写入 %s ... "
 #: ../vector/v.lrs/v.lrs.create/main.c:122
 #: ../vector/v.lrs/v.lrs.label/main.c:103
 #, fuzzy
-msgid "Linear Reference System"
+msgid "linear reference system"
 msgstr "基准分类的文件名称"
 
 #: ../vector/v.lrs/v.lrs.segment/main.c:75
