--- a/locale/po/grassmods_fr.po
+++ b/locale/po/grassmods_fr.po
@@ -14344,7 +14344,7 @@ msgstr "Écriture %s..."
 #: ../vector/v.lrs/v.lrs.create/main.c:122
 #: ../vector/v.lrs/v.lrs.label/main.c:103
 #, fuzzy
-msgid "Linear Reference System"
+msgid "linear reference system"
 msgstr "Nom de fichier des classes de référence"
 
 #: ../vector/v.lrs/v.lrs.segment/main.c:75
