--- a/locale/po/grassmods_lv.po
+++ b/locale/po/grassmods_lv.po
@@ -13663,7 +13663,7 @@ msgstr "Rakstu jaunu failu... \n"
 #: ../vector/v.lrs/v.lrs.where/main.c:58
 #: ../vector/v.lrs/v.lrs.create/main.c:122
 #: ../vector/v.lrs/v.lrs.label/main.c:103
-msgid "Linear Reference System"
+msgid "linear reference system"
 msgstr ""
 
 #: ../vector/v.lrs/v.lrs.segment/main.c:75
