--- a/locale/po/grassmods_sl.po
+++ b/locale/po/grassmods_sl.po
@@ -13686,7 +13686,7 @@ msgstr "Zapisujem novo datoteko...\n"
 #: ../vector/v.lrs/v.lrs.create/main.c:122
 #: ../vector/v.lrs/v.lrs.label/main.c:103
 #, fuzzy
-msgid "Linear Reference System"
+msgid "linear reference system"
 msgstr "Ime datoteke z referenènimi razredi"
 
 #: ../vector/v.lrs/v.lrs.segment/main.c:75
