keywords cosmetics: completing https://trac.osgeo.org/grass/changeset/66134
git-svn-id: https://svn.osgeo.org/grass/grass/branches/releasebranch_7_0@66145 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/locale/po/grassmods_ar.po
+++ b/locale/po/grassmods_ar.po
@@ -13224,7 +13224,7 @@ msgstr "كتابة ملف جديد...\n"
 #: ../vector/v.lrs/v.lrs.create/main.c:122
 #: ../vector/v.lrs/v.lrs.label/main.c:103
 #, fuzzy
-msgid "Linear Reference System"
+msgid "linear reference system"
 msgstr "اسم ملف الأصناف المرجعية"
 
 #: ../vector/v.lrs/v.lrs.segment/main.c:75
