--- a/locale/po/grassmods_th.po
+++ b/locale/po/grassmods_th.po
@@ -13225,7 +13225,7 @@ msgstr "กำลังเขียน ใน แผนที่ ... "
 #: ../vector/v.lrs/v.lrs.create/main.c:122
 #: ../vector/v.lrs/v.lrs.label/main.c:103
 #, fuzzy
-msgid "Linear Reference System"
+msgid "linear reference system"
 msgstr "สร้าง ระบบการอ้างอิงตำแหน่งเชิงเส้น"
 
 #: ../vector/v.lrs/v.lrs.segment/main.c:75
