--- a/locale/po/grassmods_vi.po
+++ b/locale/po/grassmods_vi.po
@@ -13304,7 +13304,7 @@ msgstr "Đang ghi đầu ra..."
 #: ../vector/v.lrs/v.lrs.create/main.c:122
 #: ../vector/v.lrs/v.lrs.label/main.c:103
 #, fuzzy
-msgid "Linear Reference System"
+msgid "linear reference system"
 msgstr "Tạo Hệ tham chiếu Tuyến tính"
 
 #: ../vector/v.lrs/v.lrs.segment/main.c:75
