--- a/locale/po/grassmods_pl.po
+++ b/locale/po/grassmods_pl.po
@@ -13122,7 +13122,7 @@ msgstr "Zapisuje punkty..."
 #: ../vector/v.lrs/v.lrs.create/main.c:122
 #: ../vector/v.lrs/v.lrs.label/main.c:103
 #, fuzzy
-msgid "Linear Reference System"
+msgid "linear reference system"
 msgstr "Utwórz Linear Reference System"
 
 #: ../vector/v.lrs/v.lrs.segment/main.c:75
