dox: improve index and add rst lib
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@66146 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/lib/rst/rstlib.dox
+++ b/lib/rst/rstlib.dox
@@ -1,4 +1,4 @@
-/*! \page rst Regularized spline with tension interpolation library
+/*! \page rstlib Library for interpolation with regularized splines with tension
 
 \tableofcontents
 
