--- a/lib/vector/dglib/dglib.dox
+++ b/lib/vector/dglib/dglib.dox
@@ -1,4 +1,4 @@
-/*! \page dglib Directed Graph Library
+/*! \page dglib GRASS Directed Graph Library
 
 by GRASS Development Team (http://grass.osgeo.org)
 
