--- a/grasslib.dox
+++ b/grasslib.dox
@@ -66,7 +66,7 @@ href="http://grass.osgeo.org">http://grass.osgeo.org</a>
  - pngdriver:   \ref pngdriverlib
  - psdriver:    \ref psdriverlib
 
-\subsection statslibs Math and Statisctics Libraries
+\subsection statslibs Math and Statistics Libraries
 
  - arraystats:  \ref arraystatslib (library of statistics for arrays of doubles)
  - cdhc:	\ref cdhclib
