temporal: fix msg typo
git-svn-id: https://svn.osgeo.org/grass/grass/branches/releasebranch_7_0@66276 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/locale/po/grasslibs_cs.po
+++ b/locale/po/grasslibs_cs.po
@@ -3615,7 +3615,7 @@ msgstr "Neznámý vektorový typ"
 
 #: ../lib/python/temporal/open_stds.py:66
 #, fuzzy, python-format
-msgid "Space time %(sp)s dataset <%(name)s> no found"
+msgid "Space time %(sp)s dataset <%(name)s> not found"
 msgstr "Rastrová mapa <%s> nebyla nalezena"
 
 #: ../lib/python/temporal/open_stds.py:105
