--- a/locale/po/grasslibs_fr.po
+++ b/locale/po/grasslibs_fr.po
@@ -3638,7 +3638,7 @@ msgstr "Type vectoriel inconnu."
 
 #: ../lib/python/temporal/open_stds.py:66
 #, fuzzy, python-format
-msgid "Space time %(sp)s dataset <%(name)s> no found"
+msgid "Space time %(sp)s dataset <%(name)s> not found"
 msgstr "La carte vecteur <%s> n'a pas été trouvée"
 
 #: ../lib/python/temporal/open_stds.py:105
