--- a/locale/po/grasslibs_lv.po
+++ b/locale/po/grasslibs_lv.po
@@ -3555,7 +3555,7 @@ msgstr "nezināns interpolācijas tips"
 
 #: ../lib/python/temporal/open_stds.py:66
 #, fuzzy, python-format
-msgid "Space time %(sp)s dataset <%(name)s> no found"
+msgid "Space time %(sp)s dataset <%(name)s> not found"
 msgstr "Ieejas vektors '%s' nav atrasts"
 
 #: ../lib/python/temporal/open_stds.py:105
