--- a/locale/po/grasslibs_ru.po
+++ b/locale/po/grasslibs_ru.po
@@ -3617,7 +3617,7 @@ msgstr "Неизвестный тип вектора."
 
 #: ../lib/python/temporal/open_stds.py:66
 #, fuzzy, python-format
-msgid "Space time %(sp)s dataset <%(name)s> no found"
+msgid "Space time %(sp)s dataset <%(name)s> not found"
 msgstr "Растровый слой <%s> не найден"
 
 #: ../lib/python/temporal/open_stds.py:105
