--- a/locale/po/grasslibs_sl.po
+++ b/locale/po/grasslibs_sl.po
@@ -3591,7 +3591,7 @@ msgstr "Nepoznan \"location\""
 
 #: ../lib/python/temporal/open_stds.py:66
 #, fuzzy, python-format
-msgid "Space time %(sp)s dataset <%(name)s> no found"
+msgid "Space time %(sp)s dataset <%(name)s> not found"
 msgstr "Vneseni vektor '%s' ni bil najden"
 
 #: ../lib/python/temporal/open_stds.py:105
