--- a/locale/po/grasslibs_th.po
+++ b/locale/po/grasslibs_th.po
@@ -3607,7 +3607,7 @@ msgstr "ไม่ทราบชนิดของข้อมูลเชิง
 
 #: ../lib/python/temporal/open_stds.py:66
 #, fuzzy, python-format
-msgid "Space time %(sp)s dataset <%(name)s> no found"
+msgid "Space time %(sp)s dataset <%(name)s> not found"
 msgstr "ไม่พบแผนที่เชิงภาพ <%s> "
 
 #: ../lib/python/temporal/open_stds.py:105
