--- a/locale/po/grasslibs_vi.po
+++ b/locale/po/grasslibs_vi.po
@@ -3609,7 +3609,7 @@ msgstr "Kiểu vec-tơ không biết."
 
 #: ../lib/python/temporal/open_stds.py:66
 #, fuzzy, python-format
-msgid "Space time %(sp)s dataset <%(name)s> no found"
+msgid "Space time %(sp)s dataset <%(name)s> not found"
 msgstr "Không tìm thấy bản đồ raster <%s>"
 
 #: ../lib/python/temporal/open_stds.py:105
